@@ -7,6 +7,7 @@
 - Improved rendering for right-to-left languages in frontend and backend
 - Fixed an issue where settings overwrites for the sample texts dropdown would incorrectly render the default settings' sample texts
 - Fixed the appearance of color picker buttons in the Fontsampler admin area
+- Fixed the warning about the minimum PHP version required for Fontsampler to be 5.6.33
 - ! Deprecating Specimen and Link UI fields; those will get removed with 0.5.0 and replaced with hooks to enable customising
 - ! Deprecating "Legacy formats" now still included (hidden by default) in the admin area; those will get removed with 0.5.0
 
